--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
 # Compiled source #
 ###################
 *.com
