--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 github-org-name: nyu-database-design
+github-repo-name: course-materials
 baseurl: /course-materials
 title: Database Design & Implementation
 description: >
