--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,16 @@ description: >
   A fantastic voyage through designing databases for practical implementation
 copyright: GNU General Public License, Version 3
 layouts_dir: assets/jekyll/_layouts/
+plugins:
+  - "jekyll-github-metadata"
+defaults:
+  - scope:
+      path: "content"
+      type: pages
+    values:
+      layout: github
+  - scope:
+      path: "slides"
+      type: pages
+    values:
+      layout: presentation
