--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Database Design & Implementation
 description: >
   A fantastic voyage through designing databases for practical implementation
 copyright: GNU General Public License, Version 3
-layouts_dir: assets/jekyll/_layouts/
+layouts_dir: theme/_layouts/
 plugins:
   - jekyll-github-metadata
   - jekyll-seo-tag
